--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chat App</title>
+    <title>Wing-GPT</title>
     <style>
+        h1 {text-align:center;}
         body { font-family: Arial; font-size: large; max-width: 600px; margin: 50px auto; }
-        #messages { height: 400px; border: 1px solid #ccc; padding: 10px; overflow-y: scroll; margin-bottom: 10px; }
-        #userInput { width: 80%; padding: 10px; }
         button { padding: 10px 20px; }
     </style>
 </head>
 <body>
-    <h1>Chat with AI</h1>
+    <h1>Chat with Wing-GPT</h1>
     <div id="messages"></div>
     <input type="text" id="userInput" placeholder="Type a message...">
     <button onclick="sendMessage()">Send</button>
+    
 
     <script>
         async function sendMessage() {
